--- a/force-app/main/default/classes/LeadFromCaseController.cls
+++ b/force-app/main/default/classes/LeadFromCaseController.cls
@@ -1,14 +1,14 @@
 public class LeadFromCaseController {
     public String caseId { get; set; }
     public Lead leadRecord { get; set; }
-     public Id leadId { get; set; }
+    public Id leadId { get; set; }
     
     public LeadFromCaseController() {
         caseId = ApexPages.currentPage().getParameters().get('caseId');
         leadRecord = new Lead();
         leadId = ApexPages.currentPage().getParameters().get('leadId') != null 
-                 ? ApexPages.currentPage().getParameters().get('leadId') 
-                 : null;
+            ? ApexPages.currentPage().getParameters().get('leadId') 
+            : null;
         populateLeadFromCase();
     }
     
@@ -17,7 +17,7 @@ public class LeadFromCaseController {
         try {
             if (caseId != null) {
                 Case caseRecord = [
-                    SELECT Id, Subject, SuppliedEmail, SuppliedName,SuppliedPhone
+                    SELECT Id, Subject, SuppliedEmail, SuppliedName, SuppliedPhone, Status
                     FROM Case 
                     WHERE Id = :caseId
                     LIMIT 1
@@ -31,19 +31,18 @@ public class LeadFromCaseController {
                     leadRecord.phone = caseRecord.SuppliedPhone;
                 }
             }
-              if (leadId != null) {
-                leadRecord = [SELECT Id, FirstName, LastName, Email,Travel_Date__c,Number_of_Adult__c FROM Lead WHERE Id = :leadId LIMIT 1];
+            if (leadId != null) {
+                leadRecord = [SELECT Id, FirstName, LastName, Email, Travel_Date__c, Number_of_Adult__c, Flight_No__c FROM Lead WHERE Id = :leadId LIMIT 1];
             }
         } catch (Exception e) {
-            system.debug('error message '+e.getMessage() +' line number '+e.getLineNumber());
+            system.debug('Error message: ' + e.getMessage() + ' at line number: ' + e.getLineNumber());
         }
-        
     }
     
     // Save the Lead record
     public PageReference saveLead() {
         try {
-           if (leadRecord.Id != null) {
+            if (leadRecord.Id != null) {
                 // Update the existing Lead if ID is present
                 update leadRecord;
                 ApexPages.addMessage(new ApexPages.Message(ApexPages.Severity.CONFIRM, 'Lead updated successfully.'));
@@ -51,10 +50,35 @@ public class LeadFromCaseController {
                 // Insert a new Lead if no ID exists
                 insert leadRecord;
                 ApexPages.addMessage(new ApexPages.Message(ApexPages.Severity.CONFIRM, 'Lead created successfully.'));
+                
+                // Close the associated case when a new lead is created
+                if (caseId != null) {
+                    closeAssociatedCase(caseId);
+                }
             }
+            String leadRecordUrl = '/lightning/r/Lead/' + (leadId != null ? leadId : leadRecord.Id) + '/view';
+            return new PageReference(leadRecordUrl);
         } catch (Exception e) {
             ApexPages.addMessage(new ApexPages.Message(ApexPages.Severity.ERROR, 'Error: ' + e.getMessage()));
         }
         return null;
+    }
+    
+    // Close the associated case
+    private void closeAssociatedCase(String caseId) {
+        try {
+            Case caseRecord = [
+                SELECT Id, Status
+                FROM Case 
+                WHERE Id = :caseId
+                LIMIT 1
+            ];
+            if (caseRecord != null) {
+                caseRecord.Status = 'Closed';
+                update caseRecord;
+            }
+        } catch (Exception e) {
+            ApexPages.addMessage(new ApexPages.Message(ApexPages.Severity.ERROR, 'Error closing Case: ' + e.getMessage()));
+        }
     }
 }
