--- a/force-app/main/default/classes/LeadFromCaseController.cls
+++ b/force-app/main/default/classes/LeadFromCaseController.cls
@@ -1,8 +1,8 @@
-public class LeadFromCaseController {
+public with sharing class LeadFromCaseController {
     public String caseId { get; set; }
     public Lead leadRecord { get; set; }
     public Id leadId { get; set; }
-    
+
     public LeadFromCaseController() {
         caseId = ApexPages.currentPage().getParameters().get('caseId');
         leadRecord = new Lead();
@@ -11,48 +11,77 @@ public class LeadFromCaseController {
             : null;
         populateLeadFromCase();
     }
-    
-    // Fetch Case record and map values to Lead
+
+    // Fetch Leads associated with a Case
+    @AuraEnabled(cacheable=true)
+    public static List<Lead> getLeadsForCase(Id caseId) {
+        if (String.isBlank(caseId)) {
+            throw new IllegalArgumentException('Case ID cannot be null or empty.');
+        }
+
+        try {
+            return [
+                SELECT Id, Name, Case__c 
+                FROM Lead 
+                WHERE Case__c = :caseId
+            ];
+        } catch (Exception e) {
+            System.debug('Error fetching Leads for Case: ' + e.getMessage());
+            throw new AuraHandledException('An error occurred while retrieving Leads. Please contact your administrator.');
+        }
+    }
+
+    // Populate Lead from Case
     public void populateLeadFromCase() {
         try {
             if (caseId != null) {
-                Case caseRecord = [
-                    SELECT Id, Subject, SuppliedEmail, SuppliedName, SuppliedPhone, Status
-                    FROM Case 
-                    WHERE Id = :caseId
-                    LIMIT 1
-                ];
-                
-                // Map values from Case to Lead
-                if (caseRecord != null) {
-                    leadRecord.Email = caseRecord.SuppliedEmail;
-                    leadRecord.LastName = caseRecord.SuppliedName;
-                    //leadRecord.Company = caseRecord.Subject;
-                    leadRecord.phone = caseRecord.SuppliedPhone;
-                    leadRecord.Case__c = caseRecord.Id;
+                List<Lead> leads = getLeadsForCase(caseId);
+
+                if (!leads.isEmpty()) {
+                    // Use the first Lead from the list
+                    leadRecord = leads[0];
+                } else {
+                    // Fetch Case to map values if no Leads are found
+                    Case caseRecord = [
+                        SELECT Id, Subject, SuppliedEmail, SuppliedName, SuppliedPhone, Status
+                        FROM Case 
+                        WHERE Id = :caseId
+                        LIMIT 1
+                    ];
+
+                    if (caseRecord != null) {
+                        leadRecord.Email = caseRecord.SuppliedEmail;
+                        leadRecord.LastName = caseRecord.SuppliedName;
+                        leadRecord.Phone = caseRecord.SuppliedPhone;
+                        leadRecord.Case__c = caseRecord.Id;
+                    }
                 }
             }
+
             if (leadId != null) {
-                leadRecord = [SELECT Id, FirstName, LastName, Email, Travel_Date__c, Number_of_Adult__c, Flight_No__c,Service_Airport__c,Journey_Type__c, Case__c FROM Lead WHERE Id = :leadId LIMIT 1];
+                leadRecord = [
+                    SELECT Id, FirstName, LastName, Email, Travel_Date__c, Number_of_Adult__c, Flight_No__c, 
+                           Service_Airport__c, Journey_Type__c, Case__c 
+                    FROM Lead 
+                    WHERE Id = :leadId 
+                    LIMIT 1
+                ];
             }
         } catch (Exception e) {
-            system.debug('Error message: ' + e.getMessage() + ' at line number: ' + e.getLineNumber());
+            System.debug('Error message: ' + e.getMessage() + ' at line number: ' + e.getLineNumber());
         }
     }
-    
+
     // Save the Lead record
     public PageReference saveLead() {
         try {
             if (leadRecord.Id != null) {
-                // Update the existing Lead if ID is present
                 update leadRecord;
                 ApexPages.addMessage(new ApexPages.Message(ApexPages.Severity.CONFIRM, 'Lead updated successfully.'));
             } else {
-                // Insert a new Lead if no ID exists
                 insert leadRecord;
                 ApexPages.addMessage(new ApexPages.Message(ApexPages.Severity.CONFIRM, 'Lead created successfully.'));
-                
-                // Close the associated case when a new lead is created
+
                 if (caseId != null) {
                     closeAssociatedCase(caseId);
                 }
@@ -64,7 +93,7 @@ public class LeadFromCaseController {
         }
         return null;
     }
-    
+
     // Close the associated case
     private void closeAssociatedCase(String caseId) {
         try {
